Commit 0002. Tintoreria Cardona. spanish mock up page

--- a/index.html
+++ b/index.html
@@ -1,129 +1,124 @@
 <!DOCTYPE html>
-<html>
+<html lang="es">
 <head>
-	<title>Tintoreria Cardona</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<title>Tintoreria Cardona</title>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
 </head>
 <body>
-
-<!-- Header section -->
-<header class="container-fluid">
-	<img src="header-image.jpg" alt="Tintoreria Cardona">
-</header>
-
-<!-- Main content section -->
-<main class="container py-5">
-	<div class="row">
-		<div class="col-md-8">
-			<h1>Welcome to Tintoreria Cardona</h1>
-			<p>We provide professional laundry and dry cleaning services for all your clothing and household items. Our experienced staff uses state-of-the-art equipment and eco-friendly detergents to ensure your clothes come out fresh, clean, and looking their best.</p>
-			<a href="#schedule-pickup" class="btn btn-primary btn-lg">Schedule a pickup</a>
+	<header class="container-fluid">
+		<img src="header-image.jpg" alt="Tintoreria Cardona">
+	</header>
+	<main class="container py-5" lang="es">
+		<div class="row">
+			<div class="col-md-8">
+				<h1>Bienvenidos a Tintoreria Cardona</h1>
+				<p>Ofrecemos servicios profesionales de lavandería y limpieza en seco para todas sus prendas y objetos domésticos. Nuestro personal experimentado utiliza equipamiento de última generación y detergente ecológico para asegurar que sus prendas salgan limpias, frescas y con el aspecto más adecuado.</p>
+				<a href="#schedule-pickup" class="btn btn-primary btn-lg">Solicita una recogida</a>
+			</div>
+			<div class="col-md-4">
+				<img src="laundry-service.jpg" alt="Servicio de lavandería" class="img-fluid">
+			</div>
 		</div>
-		<div class="col-md-4">
-			<img src="laundry-service.jpg" alt="Laundry service" class="img-fluid">
+		<hr>
+		<div class="row">
+			<div class="col-md-4">
+				<h2>Nuestros servicios</h2>
+				<ul>
+					<li>Lavandería y limpieza en seco para todo tipo de prendas</li>
+					<li>Ropa de cama, toallas y otros objetos domésticos</li>
+					<li>Arreglos y reparaciones</li>
+					<li>Reparación y limpieza de calzado</li>
+				</ul>
+			</div>
+			<div class="col-md-8">
+				<h2>Nuestros precios</h2>
+				<table class="table">
+					<thead>
+						<tr>
+							<th>Servicio</th>
+							<th>Precio</th>
+						</tr>
+					</thead>
+					<tbody>
+						<tr>
+							<td>Lavado y doblado</td>
+							<td>$2.50 por libra</td>
+						</tr>
+						<tr>
+							<td>Limpieza en seco</td>
+							<td>Desde $5 por prenda</td>
+						</tr>
+						<tr>
+							<td>Ropa de cama</td>
+							<td>Desde $10</td>
+						</tr>
+						<tr>
+							<td>Reparación de calzado</td>
+							<td>Desde $15</td>
+						</tr>
+					</tbody>
+				</table>
+			</div>
 		</div>
-	</div>
-	<hr>
-	<div class="row">
-		<div class="col-md-4">
-			<h2>Our services</h2>
-			<ul>
-				<li>Laundry and dry cleaning for all types of clothing</li>
-				<li>Bedding, towels, and other household items</li>
-				<li>Alterations and repairs</li>
-				<li>Shoe repair and shining</li>
-			</ul>
-		</div>
-		<div class="col-md-8">
-			<h2>Our prices</h2>
-			<table class="table">
-				<thead>
-					<tr>
-						<th>Service</th>
-						<th>Price</th>
-					</tr>
-				</thead>
-				<tbody>
-					<tr>
-						<td>Wash and fold</td>
-						<td>$2.50 per pound</td>
-					</tr>
-					<tr>
-						<td>Dry cleaning</td>
-						<td>Starting at $5 per item</td>
-					</tr>
-					<tr>
-						<td>Bedding</td>
-						<td>Starting at $10</td>
-					</tr>
-					<tr>
-						<td>Shoe repair</td>
-						<td>Starting at $15</td>
-					</tr>
-				</tbody>
-			</table>
-		</div>
-	</div>
-	<hr>
-<div class="row">
-	<div class="col-md-8">
-		<h2>Weekly post</h2>
-		<p>Stay up-to-date with the latest news and tips from Tintoreria Cardona. Our weekly blog covers topics such as:</p>
-		<ul>
-			<li>How to care for delicate fabrics</li>
-			<li>The benefits of eco-friendly laundry detergents</li>
-			<li>How to remove tough stains from clothing</li>
-		</ul>
-	</div>
-	<div class="col-md-4">
-		<img src="blog-image.jpg" alt="Blog post" class="img-fluid">
-	</div>
+		<hr>
+		<div class="row">
+			<div class="col-md-8">
+				<h2>Publicaciones semanales</h2>
+<p>Manténgase al día con las últimas noticias y consejos de Tintoreria Cardona. Nuestro blog semanal cubre temas como:</p>
+<ul>
+<li>Cómo cuidar telas delicadas</li>
+<li>Los beneficios de los detergentes de lavandería ecológicos</li>
+<li>Cómo quitar manchas difíciles de la ropa</li>
+</ul>
+</div>
+<div class="col-md-4">
+<img src="blog-image.jpg" alt="Publicación del blog" class="img-fluid">
+</div>
 </div>
 <hr>
 <div class="row" id="schedule-pickup">
-	<div class="col-md-8">
-		<h2>Schedule a pickup</h2>
-		<form>
-			<div class="form-group">
-				<label for="name">Name:</label>
-				<input type="text" class="form-control" id="name" name="name" required>
-			</div>
-			<div class="form-group">
-				<label for="email">Email:</label>
-				<input type="email" class="form-control" id="email" name="email" required>
-			</div>
-			<div class="form-group">
-				<label for="phone">Phone:</label>
-				<input type="tel" class="form-control" id="phone" name="phone" required>
-			</div>
-			<div class="form-group">
-				<label for="pickup-date">Pickup date:</label>
-				<input type="date" class="form-control" id="pickup-date" name="pickup-date" required>
-			</div>
-			<div class="form-group">
-				<label for="pickup-time">Pickup time:</label>
-				<input type="time" class="form-control" id="pickup-time" name="pickup-time" required>
-			</div>
-			<button type="submit" class="btn btn-primary">Submit</button>
-		</form>
-	</div>
-	<div class="col-md-4">
-		<img src="pickup-image.jpg" alt="Schedule a pickup" class="img-fluid">
-	</div>
+<div class="col-md-8">
+<h2>Solicita una recogida</h2>
+<form>
+<div class="form-group">
+<label for="name">Nombre:</label>
+<input type="text" class="form-control" id="name" name="name" required>
+</div>
+<div class="form-group">
+<label for="email">Correo electrónico:</label>
+<input type="email" class="form-control" id="email" name="email" required>
+</div>
+<div class="form-group">
+<label for="phone">Teléfono:</label>
+<input type="tel" class="form-control" id="phone" name="phone" required>
+</div>
+<div class="form-group">
+<label for="pickup-date">Fecha de recogida:</label>
+<input type="date" class="form-control" id="pickup-date" name="pickup-date" required>
+</div>
+<div class="form-group">
+<label for="pickup-time">Hora de recogida:</label>
+<input type="time" class="form-control" id="pickup-time" name="pickup-time" required>
+</div>
+<button type="submit" class="btn btn-primary">Enviar</button>
+</form>
+</div>
+<div class="col-md-4">
+<img src="pickup-image.jpg" alt="Solicita una recogida" class="img-fluid">
+</div>
 </div>
 </main>
-<!-- Footer section -->
 <footer class="container-fluid">
-	<p>Follow us on social media:</p>
-	<a href="https://www.facebook.com/tintoreriacardona" target="_blank"><i class="fab fa-facebook fa-2x"></i></a>
-	<a href="https://twitter.com/tintoreriacar" target="_blank"><i class="fab fa-twitter fa-2x"></i></a>
-	<a href="https://www.instagram.com/tintoreriacardona/" target="_blank"><i class="fab fa-instagram fa-2x"></i></a>
+<p>Síguenos en las redes sociales:</p>
+<a href="https://www.facebook.com/tintoreriacardona" target="_blank"><i class="fab fa-facebook fa-2x"></i></a>
+<a href="https://twitter.com/tintoreriacar" target="_blank"><i class="fab fa-twitter fa-2x"></i></a>
+<a href="https://www.instagram.com/tintoreriacardona/" target="_blank"><i class="fab fa-instagram fa-2x"></i></a>
 </footer>
+
 </body>
 </html>
-		
