Commit 0003. Tintoreria Cardona. spanish mock up page, catalan and english

--- a/index.html
+++ b/index.html
@@ -8,8 +8,21 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+	<!-- Bootstrap CSS -->
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+	
+	<!-- Font Awesome icons -->
+	<script src="https://kit.fontawesome.com/yourkitid.js" crossorigin="anonymous"></script>
+	
+
+
 </head>
 <body>
+    <div class="language-selector">
+		<a href="index.html"><i class="fas fa-flag flag-es"></i></a>
+		<a href="index_ca.html"><i class="fas fa-flag flag-ca"></i></a>
+		<a href="index_en.html"><i class="fas fa-flag flag-en"></i></a>
+	</div>
 	<header class="container-fluid">
 		<img src="header-image.jpg" alt="Tintoreria Cardona">
 	</header>
