Commit 0004. Tintoreria Cardona. precios y servicios español

--- a/index.html
+++ b/index.html
@@ -42,10 +42,12 @@
 			<div class="col-md-4">
 				<h2>Nuestros servicios</h2>
 				<ul>
-					<li>Lavandería y limpieza en seco para todo tipo de prendas</li>
+					<li>Lavandería y tintoreria para todo tipo de prendas</li>
 					<li>Ropa de cama, toallas y otros objetos domésticos</li>
-					<li>Arreglos y reparaciones</li>
-					<li>Reparación y limpieza de calzado</li>
+					<li>Limpieza de alfombras</li>
+                    <li>Piel y pelo animal</li>
+                    <li>Teñimos ropa</li>
+
 				</ul>
 			</div>
 			<div class="col-md-8">
@@ -59,20 +61,24 @@
 					</thead>
 					<tbody>
 						<tr>
-							<td>Lavado y doblado</td>
-							<td>$2.50 por libra</td>
+							<td>Camisa</td>
+							<td>Desde 3.90€ por prenda</td>
 						</tr>
 						<tr>
-							<td>Limpieza en seco</td>
-							<td>Desde $5 por prenda</td>
+							<td>Polo</td>
+							<td>Desde 4.25€ por prenda</td>
 						</tr>
 						<tr>
-							<td>Ropa de cama</td>
-							<td>Desde $10</td>
+							<td>Corbata</td>
+							<td>3.95 € por unidad</td>
 						</tr>
 						<tr>
-							<td>Reparación de calzado</td>
-							<td>Desde $15</td>
+							<td>Jersey</td>
+							<td>Desde 4.90€ por prenda </td>
+						</tr>
+                        <tr>
+							<td>Traje</td>
+							<td>Desde 14€ (americana y pantalón) </td>
 						</tr>
 					</tbody>
 				</table>
