Commit 0005. Tintoreria Cardona. prices and servcies catalan and english

--- a/index_ca.html
+++ b/index_ca.html
@@ -45,38 +45,44 @@
 			<div class="col-md-4">
 				<h2>Els nostres serveis</h2>
 				<ul>
-					<li>Neteja en sec i bugaderia per a tot tipus de roba</li>
-					<li>Ropa de llit, tovalloles i altres articles domèstics</li>
-					<li>Retocs i reparacions</li>
-					<li>Reparació i politura de calçat</li>
+					<li> Rentat i tintoreria per a tot tipus de peces </li>
+					<li> Ropa de llit, tovalloles i altres objectes domèstics </li>
+					<li>Neteja de catifes</li>
+                    <li>Pell i pèl animal</li>
+                    <li>Teñim roba</li>
 				</ul>
 			</div>
 			<div class="col-md-8">
 				<h2>Els nostres preus</h2>
 				<table class="table">
 					<thead>
-						<tr>
-							<th>Servei</th>
-							<th>Preu</th>
-						</tr>
-					</thead>
-					<tbody>
-						<tr>
-							<td>Bugada i plegat</td>
-							<td>2,50 € per lliura</td>
-						</tr>
-						<tr>
-							<td>Neteja en sec</td>
-							<td>Des de 5 € per peça</td>
-						</tr>
-						<tr>
-							<td>Ropa de llit</td>
-							<td>Des de 10 €</td>
-						</tr>
-						<tr>
-							<td>Reparació de calçat</td>
-							<td>Des de 15 €</td>
-						</tr>
+						<thead>
+                            <tr>
+                                <th>Servei</th>
+                                <th>Preu</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td>Camisa</td>
+                                <td>Des de 3,90€ per peça</td>
+                            </tr>
+                            <tr>
+                                <td>Polo</td>
+                                <td>Des de 4,25€ per peça</td>
+                            </tr>
+                            <tr>
+                                <td>Corbata</td>
+                                <td>3,95€ per unitat</td>
+                            </tr>
+                            <tr>
+                                <td>Jersei</td>
+                                <td>Des de 4,90€ per peça</td>
+                            </tr>
+                            <tr>
+                                <td> Vestit </td>
+                                <td> Des de 14 € (americana i pantaló) </td>
+                            </tr>
 					</tbody>
 				</table>
 			</div>
