--- a/index_en.html
+++ b/index_en.html
@@ -47,37 +47,36 @@
 		<div class="col-md-4">
 			<h2>Our services</h2>
 			<ul>
-				<li>Laundry and dry cleaning for all types of clothing</li>
-				<li>Bedding, towels, and other household items</li>
-				<li>Alterations and repairs</li>
-				<li>Shoe repair and shining</li>
+                <li>Laundry and dry cleaning for all types of clothing</li>
+                <li>Bedding, towels, and other household items</li>
+                <li>Carpet cleaning</li>
+                <li>Leather and animal fur cleaning</li>
+                <li>Dyeing clothes</li>
 			</ul>
 		</div>
 		<div class="col-md-8">
 			<h2>Our prices</h2>
 			<table class="table">
 				<thead>
-					<tr>
-						<th>Service</th>
-						<th>Price</th>
-					</tr>
-				</thead>
-				<tbody>
-					<tr>
-						<td>Wash and fold</td>
-						<td>$2.50 per pound</td>
+                    <tr>
+						<td>Shirt</td>
+						<td>Starting at €3.90 per item</td>
 					</tr>
 					<tr>
-						<td>Dry cleaning</td>
-						<td>Starting at $5 per item</td>
+						<td>Polo shirt</td>
+						<td>Starting at €4.25 per item</td>
 					</tr>
 					<tr>
-						<td>Bedding</td>
-						<td>Starting at $10</td>
+						<td>Tie</td>
+						<td>€3.95 per unit</td>
 					</tr>
 					<tr>
-						<td>Shoe repair</td>
-						<td>Starting at $15</td>
+						<td>Sweater</td>
+						<td>Starting at €4.90 per item</td>
+					</tr>
+                    <tr>
+						<td>Suit</td>
+						<td>Starting at €14 (jacket and pants)</td>
 					</tr>
 				</tbody>
 			</table>
