Commit 0007. Tintoreria Cardona. Sheets

--- a/index.html
+++ b/index.html
@@ -80,6 +80,14 @@
 							<td>Traje</td>
 							<td>Desde 14€ (americana y pantalón) </td>
 						</tr>
+                        <tr>
+							<td>Edredon pequeño</td>
+							<td>Desde 16.90€ (no inlcuye laavado en seco) </td>
+						</tr>
+                        <tr>
+							<td>Edredon grande</td>
+							<td>Desde 18.59€ (americana y pantalón) </td>
+						</tr>
 					</tbody>
 				</table>
 			</div>
