Commit 0008. Tintoreria Cardona. Style in Spanish page

--- a/index.html
+++ b/index.html
@@ -4,118 +4,151 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Tintoreria Cardona</title>
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
 	<!-- Bootstrap CSS -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
 	
 	<!-- Font Awesome icons -->
-	<script src="https://kit.fontawesome.com/yourkitid.js" crossorigin="anonymous"></script>
+	<script src="https://kit.fontawesome.com/YOUR-KIT-ID.js" crossorigin="anonymous"></script>
 	
-
-
+	<!-- Custom styles -->
+	<link rel="stylesheet" href="style.css">
+	
+	<!-- Custom scripts -->
+	<script src="script.js"></script>
 </head>
 <body>
-    <div class="language-selector">
-		<a href="index.html"><i class="fas fa-flag flag-es"></i></a>
-		<a href="index_ca.html"><i class="fas fa-flag flag-ca"></i></a>
-		<a href="index_en.html"><i class="fas fa-flag flag-en"></i></a>
-	</div>
-	<header class="container-fluid">
-		<img src="header-image.jpg" alt="Tintoreria Cardona">
+	<header class="header">
+		<div class="language-selector">
+			<a href="index.html"><i class="fas fa-flag flag-es"></i></a>
+			<a href="index_ca.html"><i class="fas fa-flag flag-ca"></i></a>
+			<a href="index_en.html"><i class="fas fa-flag flag-en"></i></a>
+		</div>
+		<div class="header-content">
+			<img src="header-image.jpg" alt="Tintoreria Cardona">
+			<div class="logo">
+				<img src="tintoreria-cardona-logo.png" alt="Tintoreria Cardona Logo">
+			</div>
+		</div>
 	</header>
-	<main class="container py-5" lang="es">
-		<div class="row">
-			<div class="col-md-8">
-				<h1>Bienvenidos a Tintoreria Cardona</h1>
-				<p>Ofrecemos servicios profesionales de lavandería y limpieza en seco para todas sus prendas y objetos domésticos. Nuestro personal experimentado utiliza equipamiento de última generación y detergente ecológico para asegurar que sus prendas salgan limpias, frescas y con el aspecto más adecuado.</p>
-				<a href="#schedule-pickup" class="btn btn-primary btn-lg">Solicita una recogida</a>
-			</div>
-			<div class="col-md-4">
-				<img src="laundry-service.jpg" alt="Servicio de lavandería" class="img-fluid">
-			</div>
-		</div>
-		<hr>
-		<div class="row">
-			<div class="col-md-4">
-				<h2>Nuestros servicios</h2>
-				<ul>
-					<li>Lavandería y tintoreria para todo tipo de prendas</li>
-					<li>Ropa de cama, toallas y otros objetos domésticos</li>
-					<li>Limpieza de alfombras</li>
-                    <li>Piel y pelo animal</li>
-                    <li>Teñimos ropa</li>
-
-				</ul>
-			</div>
-			<div class="col-md-8">
-				<h2>Nuestros precios</h2>
-				<table class="table">
-					<thead>
-						<tr>
-							<th>Servicio</th>
-							<th>Precio</th>
-						</tr>
-					</thead>
-					<tbody>
-						<tr>
-							<td>Camisa</td>
-							<td>Desde 3.90€ por prenda</td>
-						</tr>
-						<tr>
-							<td>Polo</td>
-							<td>Desde 4.25€ por prenda</td>
-						</tr>
-						<tr>
-							<td>Corbata</td>
-							<td>3.95 € por unidad</td>
-						</tr>
-						<tr>
-							<td>Jersey</td>
-							<td>Desde 4.90€ por prenda </td>
-						</tr>
-                        <tr>
-							<td>Traje</td>
-							<td>Desde 14€ (americana y pantalón) </td>
-						</tr>
-                        <tr>
-							<td>Edredon pequeño</td>
-							<td>Desde 16.90€ (no inlcuye laavado en seco) </td>
-						</tr>
-                        <tr>
-							<td>Edredon grande</td>
-							<td>Desde 18.59€ (americana y pantalón) </td>
-						</tr>
-					</tbody>
-				</table>
+	<main class="main">
+		<div class="container">
+			<div class="row">
+				<div class="col-md-8">
+					<h1>Bienvenidos a Tintoreria Cardona</h1>
+					<p>Ofrecemos servicios profesionales de lavandería y limpieza en seco para todas sus prendas y objetos domésticos. Nuestro personal experimentado utiliza detergentes ecológicos para asegurar que sus prendas salgan limpias, frescas y con el aspecto más adecuado.</p>
+				</div>
+				<div class="col-md-4">
+					<img src="laundry-service.jpg" alt="Servicio de lavandería" class="img-fluid">
+				</div>
 			</div>
 		</div>
-		<hr>
-		<div class="row">
-			<div class="col-md-8">
-				<h2>Publicaciones semanales</h2>
-<p>Manténgase al día con las últimas noticias y consejos de Tintoreria Cardona. Nuestro blog semanal cubre temas como:</p>
-<ul>
-<li>Cómo cuidar telas delicadas</li>
-<li>Los beneficios de los detergentes de lavandería ecológicos</li>
-<li>Cómo quitar manchas difíciles de la ropa</li>
-</ul>
-</div>
-<div class="col-md-4">
-<img src="blog-image.jpg" alt="Publicación del blog" class="img-fluid">
-</div>
-</div>
-<hr>
-
+	</div>
+	<hr>
+	<div class="row">
+		<div class="col-md-4">
+			<h2>Nuestros servicios</h2>
+			<ul>
+				<li><i class="fas fa-tshirt"></i> Lavandería y tintoreria para todo tipo de prendas</li>
+				<li><i class="fas fa-bed"></i> Ropa de cama, toallas y otros objetos domésticos</li>
+				<li><i class="fas fa-carpet"></i> Limpieza de alfombras</li>
+				<li><i class="fas fa-paw"></i> Piel y pelo animal</li>
+				<li><i class="fas fa-tint"></i> Teñimos ropa</li>
+			</ul>
+		</div>
+		<div class="col-md-8">
+			<h2>Nuestros precios</h2>
+			<table class="table">
+				<thead>
+					<tr>
+						<th>Servicio</th>
+						<th>Precio</th>
+					</tr>
+				</thead>
+				<tbody>
+					<tr>
+						<td>Camisa</td>
+						<td>Desde 3.90€ por prenda</td>
+					</tr>
+					<tr>
+						<td>Polo</td>
+						<td>Desde 4.25€ por prenda</td>
+					</tr>
+					<tr>
+						<td>Corbata</td>
+						<td>3.95 € por unidad</td>
+					</tr>
+					<tr>
+						<td>Jersey</td>
+						<td>Desde 4.90€ por prenda </td>
+					</tr>
+					<tr>
+						<td>Traje</td>
+						<td>Desde 14€ (americana y pantalón) </td>
+					</tr>
+					<tr>
+						<td>Edredon pequeño</td>
+						<td>Desde 16.90€ (no inlcuye laavado en seco) </td>
+					</tr>
+					<tr>
+						<td>Edredon grande</td>
+						<td>Desde 18.50€ </td>
+					</tr>
+					<tr>
+						<td>Edredon plumas</td>
+						<td>Desde 23.50€ </td>
+					</tr>
+					<tr>
+						<td>Manta pequeña</td>
+						<td>Desde 15€ </td>
+					</tr>
+					<tr>
+						<td>Manta grande</td>
+						<td>Desde 17€ </td>
+					</tr>
+				</tbody>
+			</table>
+		</div>
+	</div>
+	<hr>
+	<div class="row">
+		<div class="col-md-8">
+			<h2>Publicaciones semanales</h2>
+			<p>Manténgase al día con las últimas noticias y consejos de Tintoreria Cardona. Nuestro blog semanal cubre temas como:</p>
+			<ul>
+				<li>Cómo cuidar telas delicadas</li>
+				<li>Los beneficios de los detergentes de lavandería ecológicos</li>
+				<li>Cómo quitar manchas difíciles de la ropa</li>
+			</ul>
+		</div>
+		<div class="col-md-4">
+			<h2>Contacto</h2>
+			<p>Estamos ubicados en:</p>
+			<p>Calle Valencia 454</p>
+			<p>932462035</p>
+			<div class="mapouter">
+				<div class="gmap_canvas">
+					<iframe width="100%" height="350" id="gmap_canvas" src="https://maps.google.com/maps?q=Calle%20Valencia%20454,%20Barcelona&t=&z=15&ie=UTF8&iwloc=&output=embed"></iframe>
+				</div>
+			</div>
+		</div>
+	</div>
 </main>
-<footer class="container-fluid">
-<p>Síguenos en las redes sociales:</p>
-<a href="https://www.facebook.com/tintoreriacardona" target="_blank"><i class="fab fa-facebook fa-2x"></i></a>
-<a href="https://twitter.com/tintoreriacar" target="_blank"><i class="fab fa-twitter fa-2x"></i></a>
-<a href="https://www.instagram.com/tintoreriacardona/" target="_blank"><i class="fab fa-instagram fa-2x"></i></a>
+<footer class="footer">
+	<div class="container">
+		<div class="row">
+			<div class="col-md-6">
+				<p>Síguenos en las redes sociales:</p>
+				<a href="https://www.facebook.com/tintoreriacardona" target="_blank"><i class="fab fa-facebook fa-2x"></i></a>
+				<a href="https://twitter.com/tintoreriacar" target="_blank"><i class="fab fa-twitter fa-2x"></i></a>
+				<a href="https://www.instagram.com/tintoreriacardona/" target="_blank"><i class="fab fa-instagram fa-2x"></i></a>
+			</div>
+			<div class="col-md-6">
+				<p>© 2023 Tintoreria Cardona</p>
+			</div>
+		</div>
+	</div>
 </footer>
-
 </body>
 </html>
+
+
