--- a/index_ca.html
+++ b/index_ca.html
@@ -33,8 +33,7 @@
 		<div class="row">
 			<div class="col-md-8">
 				<h1>Benvinguts a Tintoreria Cardona</h1>
-				<p>Ofereixem serveis professionals de bugaderia i neteja en sec per a tota la teva roba i articles domèstics. El nostre personal experimentat utilitza equipament d'última generació i detergents ecològics per assegurar que la teva roba surti fresca, neta i amb el millor aspecte possible.</p>
-				<a href="#schedule-pickup" class="btn btn-primary btn-lg">Sol·licita una recollida</a>
+				<p>Ofereixem serveis professionals de bugaderia i neteja en sec per a tota la teva roba i articles domèstics. El nostre personal experimentat utilitza detergents ecològics per assegurar que la teva roba surti fresca, neta i amb el millor aspecte possible.</p>
 			</div>
 			<div class="col-md-4">
 				<img src="laundry-service.jpg" alt="Servei de bugaderia" class="img-fluid">
@@ -83,6 +82,31 @@
                                 <td> Vestit </td>
                                 <td> Des de 14 € (americana i pantaló) </td>
                             </tr>
+							<tr>
+								<td>Edredó petit</td>
+								<td>Des de 16.90€ (no inclou neteja en sec)</td>
+							</tr>
+							<tr>
+								<td>Edredó gran</td>
+								<td>Des de 18.50€</td>
+							</tr>
+							<tr>
+								<td>Edredó de plomes</td>
+								<td>Des de 23.50€</td>
+							</tr>
+							<tr>
+								<td>Edredó nòrdic de plomes</td>
+								<td>Des de 23.50€</td>
+							</tr>
+							<tr>
+								<td>Manta petita</td>
+								<td>Des de 15€</td>
+							</tr>
+							<tr>
+								<td>Manta gran</td>
+								<td>Des de 17€</td>
+							</tr>
+		
 					</tbody>
 				</table>
 			</div>
