--- a/index_en.html
+++ b/index_en.html
@@ -35,8 +35,7 @@
 	<div class="row">
 		<div class="col-md-8">
 			<h1>Welcome to Tintoreria Cardona</h1>
-			<p>We provide professional laundry and dry cleaning services for all your clothing and household items. Our experienced staff uses state-of-the-art equipment and eco-friendly detergents to ensure your clothes come out fresh, clean, and looking their best.</p>
-			<a href="#schedule-pickup" class="btn btn-primary btn-lg">Schedule a pickup</a>
+			<p>We provide professional laundry and dry cleaning services for all your clothing and household items. Our experienced staff eco-friendly detergents to ensure your clothes come out fresh, clean, and looking their best.</p>
 		</div>
 		<div class="col-md-4">
 			<img src="laundry-service.jpg" alt="Laundry service" class="img-fluid">
@@ -78,6 +77,39 @@
 						<td>Suit</td>
 						<td>Starting at €14 (jacket and pants)</td>
 					</tr>
+                    <tr>
+						<td>Suit</td>
+						<td>Starting at €14 (jacket and pants)</td>
+					</tr>
+                                        <tr>
+						<td>Suit</td>
+						<td>Starting at €14 (jacket and pants)</td>
+					</tr>
+					<tr>
+						<td>Small duvet</td>
+						<td>From 16.90€ (dry cleaning not included)</td>
+					</tr>
+					<tr>
+						<td>Large duvet</td>
+						<td>From 18.50€</td>
+					</tr>
+					<tr>
+						<td>Feather duvet</td>
+						<td>From 23.50€</td>
+					</tr>
+					<tr>
+						<td>Feather Nordic duvet</td>
+						<td>From 23.50€</td>
+					</tr>
+					<tr>
+						<td>Small blanket</td>
+						<td>From 15€</td>
+					</tr>
+					<tr>
+						<td>Large blanket</td>
+						<td>From 17€</td>
+					</tr>
+
 				</tbody>
 			</table>
 		</div>
