Commit 0008. Tintoreria Cardona. Giving an special touch

--- a/index.html
+++ b/index.html
@@ -9,6 +9,14 @@
 	
 	<!-- Font Awesome icons -->
 	<script src="https://kit.fontawesome.com/YOUR-KIT-ID.js" crossorigin="anonymous"></script>
+	<link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&display=swap" rel="stylesheet">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
+	<link rel="stylesheet" href="https://cdn.rawgit.com/michalsnik/aos/2.1.1/dist/aos.css">
+	<script src="https://cdn.rawgit.com/michalsnik/aos/2.1.1/dist/aos.js"></script>
+
+
+	
+
 	
 	<!-- Custom styles -->
 	<link rel="stylesheet" href="style.css">
@@ -34,7 +42,10 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-md-8">
-					<h1>Bienvenidos a Tintoreria Cardona</h1>
+					<h1 data-aos="fade-up">Bienvenidos a Tintoreria Cardona</h1>
+					<div class="col-md-4 animate-slideInRight">
+						<img src="laundry-service.jpg" alt="Servicio de lavandería" class="img-fluid">
+					</div>
 					<p>Ofrecemos servicios profesionales de lavandería y limpieza en seco para todas sus prendas y objetos domésticos. Nuestro personal experimentado utiliza detergentes ecológicos para asegurar que sus prendas salgan limpias, frescas y con el aspecto más adecuado.</p>
 				</div>
 				<div class="col-md-4">
@@ -149,6 +160,10 @@
 	</div>
 </footer>
 </body>
+<script>
+    AOS.init();
+</script>
+
 </html>
 
 
