Commit 0009. Tintoreria Cardona. Quick fix to address

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 		<div class="col-md-4">
 			<h2>Contacto</h2>
 			<p>Estamos ubicados en:</p>
-			<p>Calle Valencia 454</p>
+			<p>Calle Valencia 454. Barcelona</p>
 			<p>932462035</p>
 			<div class="mapouter">
 				<div class="gmap_canvas">
